added the rest of the html from vscode

--- a/index.html
+++ b/index.html
@@ -3,10 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <title>Linktree.Kezia</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+20&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Linktree.Kezia</title>
 </head>
+
 <body>
-    
+ <div class="backgroundImg">
+    <img src="https://img.freepik.com/free-photo/wavy-abstract-shapes_1048-4150.jpg?w=740&t=st=1716093298~exp=1716093898~hmac=887683b7dfdebfb2f7c3ad2aa7cea9654226a77a86a41685e683b4f52ca154bd" alt="backGroundImg"/>
+ </div>   
+<header>
+    <img src="./Public/Halgah Nau Resume.jpeg" alt="profile-pic"/>
+    <h1>Welcome to <mark>Kezia Bernard-Nau's</mark> link site: </h1>
+    <p>See what I am up to =) </p>
+</header>
+    <main>
+        <a href="" target="_blank" class="link"> 
+            <div class="linkBackground"></div>
+            <p>Instagram</p>
+            <i class="fa-brands fa-square-instagram"></i>
+        </a>
+        <a href="" target="_blank" class="link"> 
+            <div class="linkBackground"></div>
+            <p>Facebook</p>
+            <i class="fa-brands fa-square-facebook"></i>
+        </a>
+        <a href="" target="_blank" class="link"> 
+            <div class="linkBackground"></div>
+            <p>Twitter</p>
+            <i class="fa-brands fa-square-twitter"></i>
+        </a>
+        <a href="" target="_blank" class="link"> 
+            <div class="linkBackground"></div>
+            <p>LinkedIn</p>
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a href="" target="_blank" class="link"> 
+            <div class="linkBackground"></div>
+            <p>Github</p>
+            <i class="fa-brands fa-square-github"></i>
+        </a>
+
+    </main>
 </body>
 </html>
